test/conformance/chainsaw/validating-policies/exceptions/allow-specific-values/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: allow-specific-values
spec:
  concurrent: false
  steps:
  - name: create exception
    try:
    - create:
        file: exception.yaml
    - sleep:
        duration: 10s
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-validating-policy-ready
    use:
      template: ../../../_step-templates/validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: allow-specific-values
  - name: create bad-pod.yaml
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create skipped-pod
    try:
    - apply:
        file: skipped-pod.yaml
  - name: create good-pod
    try:
    - apply:
        file: good-pod.yaml
